internal/render/testdata/transmission/k8s/play/transmission/base/httproute.yaml
# Generated by deploybot. Do not edit.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: transmission
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - torrent.k8s.kcloud.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: transmission
          port: 9091
