internal/render/testdata/transmission/k8s/play/transmission/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: transmission
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9091
