internal/render/testdata/transmission/k8s/play/transmission/base/statefulset.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: transmission
    spec:
      containers:
        - name: transmission
          image: docker.io/haugene/transmission-openvpn:4.3.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 4000m
              memory: 16Gi
